--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <img src="me.jpg" alt="苗字名前">
           <div class="text">
             <h3 class="content-name"><ruby><rb>町田光</rb><rt>まちだ　ひかる</rt> </ruby></h3>
-            <p>岩手県出身、埼玉県育ち　B型　水瓶座<br>趣味：ゲーム　|　美味しい物を食べる</p>
+            <p>岩手県出身、埼玉県育ち　B型　水瓶座<br>趣味：valorant　|　ラーメンを食べに行くこと</p>
             <p>中学、高校は卓球部でした。<br>休日はバイトか、お出かけしています。<br>
               池袋のお勧めの場所は、<a href="https://grandscape-ikebukuro.jp/">グランドスケープ池袋</a>の屋上にあるバッティングセンター。<br>
               課題に行き詰まった時などは学校帰りに学校を上から見下ろし？フルスイングを！<br>
